--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,26 @@
 __pycache__/experiment_data.cpython-38.pyc
 __pycache__/well_data.cpython-38.pyc
+main.spec
+__pycache__/main.cpython-38.pyc
+build/main/Analysis-00.toc
+build/main/base_library.zip
+build/main/EXE-00.toc
+build/main/main.exe.manifest
+build/main/main.pkg
+build/main/PKG-00.toc
+build/main/PYZ-00.pyz
+build/main/PYZ-00.toc
+build/main/Tree-00.toc
+build/main/Tree-01.toc
+build/main/Tree-02.toc
+build/main/Tree-03.toc
+build/main/warn-main.txt
+build/main/xref-main.html
+build/main/locket-0.2.1-py3.8.egg/EGG-INFO/dependency_links.txt
+build/main/locket-0.2.1-py3.8.egg/EGG-INFO/PKG-INFO
+build/main/locket-0.2.1-py3.8.egg/EGG-INFO/SOURCES.txt
+build/main/locket-0.2.1-py3.8.egg/EGG-INFO/top_level.txt
+build/main/locket-0.2.1-py3.8.egg/EGG-INFO/zip-safe
+build/main/locket-0.2.1-py3.8.egg/locket/__init__.py
+build/main/locket-0.2.1-py3.8.egg/locket/__pycache__/__init__.cpython-38.pyc
+dist/main.exe
