--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ __pycache__/utils.cpython-310.pyc
 __pycache__/gc_io.cpython-310.pyc
 __pycache__/gc_utils.cpython-310.pyc
 .vscode/launch.json
+__pycache__/gc_core.cpython-310.pyc
