--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ __pycache__/gc_io.cpython-310.pyc
 __pycache__/gc_utils.cpython-310.pyc
 .vscode/launch.json
 __pycache__/gc_core.cpython-310.pyc
+__pycache__/main.cpython-310.pyc
