--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,6 @@ __pycache__/gc_utils.cpython-310.pyc
 __pycache__/gc_core.cpython-310.pyc
 __pycache__/main.cpython-310.pyc
 .DS_Store
+__pycache__/gc_core.cpython-311.pyc
+__pycache__/gc_io.cpython-311.pyc
+__pycache__/gc_utils.cpython-311.pyc
