--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "96_plate_rows": ["A", "B", "C", "D", "E", "F", "G", "H"],
     "96_plate_columns": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12],
-    "384_plate_rows": ["A"],
-    "384_plate_columns": [22, 23],
+    "384_plate_rows": ["A", "B", "C", "D", "E", "F", "G", "H", "I", "J", "K", "L", "M", "N", "O", "P"],
+    "384_plate_columns": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24],
     "repeats": [["Plate 1", "Plate 3", "Plate 5"],["Plate 2", "Plate 6", "Plate 8"],["Plate 3", "Plate 9", "Plate 11"],["Plate 4", "Plate 12", "Plate 14"],["Plate 5", "Plate 15", "Plate 17"]]
 }
