--- a/config.json
+++ b/config.json
@@ -3,5 +3,19 @@
     "96_plate_columns": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12],
     "384_plate_rows": ["A", "B", "C", "D", "E", "F", "G", "H", "I", "J", "K", "L", "M", "N", "O", "P"],
     "384_plate_columns": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24],
-    "repeats": [["Plate 1"],["Plate 2", "Plate 3", "Plate 4"],["Plate 5", "Plate 6", "Plate 7"],["Plate 8", "Plate 9", "Plate 10"],["Plate 11", "Plate 12", "Plate 13"],["Plate 14", "Plate 15", "Plate 16"],["Plate 17", "Plate 18", "Plate 19"],["Plate 20", "Plate 21", "Plate 22"],["Plate 23", "Plate 24", "Plate 25"],["Plate 26", "Plate 27", "Plate 28"],["Plate 29", "Plate 30", "Plate 31"]]
+    "file_extension" : "xlsx",
+    "condition_file_map" : {
+        "SDC_pH5" : ["SDC_pH5_rep_1", "SDC_pH5_rep_2", "SDC_pH5_rep_3"],
+        "SDC_pH7" : ["SDC_pH7_rep_1", "SDC_pH7_rep_2", "SDC_pH7_rep_3"],
+        "SDC_pH8" : ["SDC_pH8_bio_reps_1-3"],
+        "SDC_30"  : ["SDC_30degrees_bio_reps_1-3"],
+        "SDC_37"  : ["SDC_37degrees_bio_reps_1-3"]
+    },
+    "plate_repeats": [
+        ["Plate 1.1", "Plate 1.2", "Plate 1.3"],
+        ["Plate 2.1", "Plate 2.2", "Plate 2.3"],
+        ["Plate 3.1", "Plate 3.2", "Plate 3.3"],
+        ["Plate 4.1", "Plate 4.2", "Plate 4.3"],
+        ["Plate 5.1", "Plate 5.2", "Plate 5.3"]
+    ]
 }
